--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,13 @@
 /* global styling goes here */
+:root {
+  --highlight-color-left: #82c0cc;
+  --background-color-left: #3943b7;
+  --text-color-left: #ffffff;
+  --highlight-color-right: #3943b7;
+  --background-color-right: #ffffff;
+  --text-color-right: #000505;
+}
+
 body {
   font-family: sans-serif;
   font-size: 16px;
@@ -10,11 +19,7 @@ body {
 .d-flex {
   display: flex;
 }
-:root {
-  --highlight-color-left: #82c0cc;
-  --background-color-left: #3943b7;
-  --text-color-left: #ffffff;
-  --highlight-color-right: #3943b7;
-  --background-color-right: #ffffff;
-  --text-color-right: #000505;
+
+.justify-content-between {
+  justify-content: space-between;
 }
