Added edit mode toggle and implemented it's functionality

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,6 +6,8 @@
   --highlight-color-right: #3943b7;
   --background-color-right: #ffffff;
   --text-color-right: #000505;
+
+  --color-black: #050517;
 }
 
 body {
@@ -22,4 +24,9 @@ body {
 
 .justify-content-between {
   justify-content: space-between;
+}
+[contenteditable='true'] {
+  border-radius: 2px;
+  background-color: #cacaca71;
+  padding: 2px;
 }
