--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,4 +1,3 @@
-/* global styling goes here */
 :root {
   --color-black: #050517;
 }
@@ -7,10 +6,12 @@ body {
   font-family: sans-serif;
   font-size: 16px;
 }
+
 .container {
   margin: 40px auto;
   max-width: 1200px;
 }
+
 .d-flex {
   display: flex;
 }
@@ -28,13 +29,25 @@ body {
 .custom-input {
   padding: 6px 12px;
   background-color: #fff;
+}
+
+select,
+.custom-input {
   border: 1px solid #ced4da;
   color: #495057;
   border-radius: 4px;
   font-size: 16px;
   line-height: 24px;
 }
-input:focus {
+
+input:focus,
+select:focus,
+[contenteditable='true']:focus {
   outline-color: #82c0cc;
   border-color: #82c0cc;
+}
+
+/* hide browser rendered input button. We will render our own button */
+.btn input[type='file'] {
+  display: none;
 }
